# pipewire-rs

./: .gitlab-ci.yml  Cargo.toml  LICENSE  deny.toml
libspa/: Cargo.toml  README.md
libspa-sys/: Cargo.toml  README.md  build.rs  wrapper.h
libspa-sys/src/: lib.rs
libspa/examples/: smoke.rs
libspa/src/: dict.rs  hook.rs  interface.rs  lib.rs  list.rs  names.rs  support.rs
pipewire/: Cargo.toml  README.md
pipewire-sys/: Cargo.toml  README.md  build.rs  wrapper.h
pipewire-sys/src/: lib.rs
pipewire/examples/: create-delete-remote-objects.rs  pw-mon.rs  roundtrip.rs
pipewire/src/: context.rs  core_.rs  error.rs  lib.rs  link.rs  loop_.rs  main_loop.rs  node.rs  port.rs  properties.rs  proxy.rs  registry.rs  spa.rs  types.rs  utils.rs
