[package]
name = "libspa-sys"
version = "0.2.2"
authors = ["Guillaume Desmottes <guillaume.desmottes@collabora.com>"]
edition = "2018"
links = "libspa-0.2"
categories = ["api-bindings", "multimedia"]
description = "Rust FFI bindings for libspa"
repository = "https://gitlab.freedesktop.org/pipewire/pipewire-rs"
license = "MIT"
readme = "README.md"
homepage = "https://pipewire.org"
documentation = "https://pipewire.pages.freedesktop.org/pipewire-rs/libspa_sys/"
keywords = ["ffi", "pipewire", "multimedia", "audio", "video"]

[dependencies]

[build-dependencies]
bindgen = "0.57"
system-deps = "3.0"

[package.metadata.system-deps]
 libspa = { name = "libspa-0.2", version = "0.2" }
