[package]
name = "pipewire-sys"
version = "0.1.0"
authors = ["Guillaume Desmottes <guillaume.desmottes@collabora.com>"]
edition = "2018"
links = "pipewire-0.3"
categories = ["api-bindings", "multimedia"]
description = "Rust FFI bindings for PipeWire"
repository = "https://gitlab.freedesktop.org/pipewire/pipewire-rs"
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://pipewire.org"
documentation = "https://docs.rs/pipewire-sys/"
keywords = ["ffi", "pipewire", "multimedia", "audio", "video"]

[dependencies]

[build-dependencies]
bindgen = "0.54"
system-deps = "1.3"

[package.metadata.system-deps]
 libpipewire = { name = "libpipewire-0.3", version = "0.3" }