[package]
name = "pipewire-sys"
version = "0.2.0"
authors = ["Guillaume Desmottes <guillaume.desmottes@collabora.com>"]
edition = "2018"
links = "pipewire-0.3"
categories = ["api-bindings", "multimedia"]
description = "Rust FFI bindings for PipeWire"
repository = "https://gitlab.freedesktop.org/pipewire/pipewire-rs"
license = "MIT"
readme = "README.md"
homepage = "https://pipewire.org"
documentation = "https://pipewire.pages.freedesktop.org/pipewire-rs/pipewire_sys/"
keywords = ["ffi", "pipewire", "multimedia", "audio", "video"]

[dependencies]
spa_sys = { package = "libspa-sys", version = "0", path = "../libspa-sys" }

[build-dependencies]
bindgen = "0.56"
system-deps = "2.0"

[package.metadata.system-deps]
 libpipewire = { name = "libpipewire-0.3", version = "0.3" }
