[package]
name = "pipewire"
version = "0.1.0"
authors = ["Guillaume Desmottes <guillaume.desmottes@collabora.com>"]
edition = "2018"
categories = ["api-bindings", "multimedia"]
description = "Rust bindings for PipeWire"
repository = "https://gitlab.freedesktop.org/pipewire/pipewire-rs"
license = "MIT"
readme = "README.md"
homepage = "https://pipewire.org"
documentation = "https://docs.rs/pipewire/"
keywords = ["pipewire", "multimedia", "audio", "video"]

[dependencies]
pipewire-sys = { version = "0.1.0", path = "../pipewire-sys" }
