[package]
name = "pipewire"
version = "0.2.0"
authors = ["Guillaume Desmottes <guillaume.desmottes@collabora.com>"]
edition = "2018"
categories = ["api-bindings", "multimedia"]
description = "Rust bindings for PipeWire"
repository = "https://gitlab.freedesktop.org/pipewire/pipewire-rs"
license = "MIT"
readme = "README.md"
homepage = "https://pipewire.org"
documentation = "https://pipewire.pages.freedesktop.org/pipewire-rs/pipewire/"
keywords = ["pipewire", "multimedia", "audio", "video"]

[dependencies]
pw_sys = { package = "pipewire-sys", path = "../pipewire-sys" }
spa_sys = { package = "libspa-sys", path = "../libspa-sys" }
spa = { package = "libspa", path = "../libspa" }
anyhow = "1"
thiserror = "1"
libc = "0.2"
signal = "0.7"
bitflags = "1.2"

[dev-dependencies]
structopt = "0.3"
once_cell = "1.5.2"
